++++++++++++++++++++++++++++++++
++   cssSweet 1.2.0-pl        ++
++   Released on 2015-01-02   ++
++++++++++++++++++++++++++++++++
Ability to process multiple Chunks
Added OnChunkFormSave event

++++++++++++++++++++++++++++++++
++   cssSweet 1.1.0-rc1       ++
++   Released on 2014-04-05   ++
++++++++++++++++++++++++++++++++
Improved minification
Improved error checking for ClientConfig class

++++++++++++++++++++++++++++++++
++   cssSweet 1.0.1-beta1     ++
++   Released on 2013-10-05   ++
++++++++++++++++++++++++++++++++
Bugfix

++++++++++++++++++++++++++++++++
++   cssSweet 1.0.0-beta1     ++
++   Released on 2013-10-05   ++
++++++++++++++++++++++++++++++++
Initial beta release